fix x-axis overflow

--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,5 @@ code {
 }
 
 #root {
-  overflow: hidden;
+  overflow-x: hidden;
 }
